--- a/module/base/arch/rv32/makefile
+++ b/module/base/arch/rv32/makefile
@@ -25,7 +25,8 @@
 
 ##################################################################################################
 # Toolchain settings
-TOOLCHAIN_PREFIX ?= riscv64-unknown-elf-
+TOOLCHAIN_LOCATION ?= ~/.local/xPacks/@xpack-dev-tools/riscv-none-elf-gcc/14.2.0-3.1/.content/bin/
+TOOLCHAIN_PREFIX ?= riscv-none-elf-
 
 ##################################################################################################
 # Toolchain commands
@@ -67,6 +68,7 @@ LD_EXTENSION = elf
 GDB_FLAGS = $(TARGET_ELF) -ex "target remote-extended localhost:3333"
 
 # Debug server
-GDB_SERVER = openocd
+GDB_SERVER = ~/.local/xPacks/@xpack-dev-tools/openocd/0.12.0-6.1/.content/bin/openocd
 
-FLASH_WRITER = openocd
+FLASH_WRITER = ~/.local/xPacks/@xpack-dev-tools/openocd/0.12.0-6.1/.content/bin/openocd
+
